# Image_video_codec_pipeline

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  install_deps.sh  tspkg.yaml
src/: config.json  main.cpp
src/AppCom/: AppCom.hpp  JpgDec.hpp  ReadPictureFromFile.hpp  SavePictureFromDataSet.hpp  VideoEnc.hpp
src/AppDec/: AppDec.hpp  Decompression.hpp
src/tool/: Files.hpp  ImageSyncQueue.hpp  ThreadBase.hpp  ThreadPool.hpp  ThreadSaveQueue.hpp  Timer.hpp  config.hpp
